compiler/tests/fail/array_expansion/x86-64/type_mismatch_return.jazz
fn f () -> reg u64[4] {
  reg u64[4] r;

  inline int i;
  for i = 0 to 4 {
    r[i] = 0;
  }

  return r;
}

export fn main () -> reg u64 {
  reg u32[8] r;
  reg u64 res;

  r = f();
  res = r[u64 0];

  return res;
}
